# focus_response

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.claude/: settings.local.json
.claude/agents/: code-architect.md  code-hygiene-guardian.md  image-processing-expert.md
.github/workflows/: python-package-1.yml
examples/: batch_process_folder.py  benchmark_caching.py  show_intermediate_outputs.py  simple_batch_example.py
focus_response/: __init__.py  batch.py  filters.py  focus_response.py  kde.py  visualization.py
output_results_optimized/filter_arrays/: dsc-0051_orig_filter.npy
output_results_optimized/kde_arrays/: dsc-0051_orig_kde.npy
tests/: __init__.py  test_batch.py  test_filters.py  test_integration.py  test_kde.py
