[build-system]
requires = ["setuptools>=70,<75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "focus_response"
version = "0.1.2"
description = "This library provides functionality to measure focus levels in images"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Hrishikesh Kanade", email = "kanade.hrishikesh1994@gmail.com"}
]
urls = {Homepage = "https://github.com/rishik18/focus_response"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.19.3",
    "opencv-python>=4.5.0",
    "matplotlib>=3.3.0",
    "scipy>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.setuptools]
packages = ["focus_response"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
